# DataSUS-FTP-Handler

./: README.md  pyproject.toml
src/: search.py
src/data/estados/: jsonEstados_to_dict.py
src/data/municipios/: dfMunicipios_to_dict.py  municipios_lat_long.csv
src/modules/data_processing/: convert_to_csv.py  corrige_codigos_municipio.py  init_cleaning.py  insere_lat_long.py  remove_breakLines.py
src/modules/post_request/: post_search.py
src/modules/validation/years/: search_years.py  validate_years.py
src/modules/webscraping/init/: configs.py  navigator.py
src/modules/webscraping/init/config/: config.json
src/modules/webscraping/scraper/: call_xpaths.py  download_utils.py  element_selector.py  search.py
